--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle and Docker
+name: Java CI with Gradle, PostgreSQL, and Docker
 
 on:
   push:
@@ -8,14 +8,30 @@ on:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
+
+    services:
+      postgres:
+        image: postgres:13
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: jfrog123
+          POSTGRES_DB: bookstore
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    env:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/bookstore
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: jfrog123
 
     steps:
       - name: Checkout Repository
@@ -30,9 +46,8 @@ jobs:
       - name: Set up Gradle with caching
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build
+      - name: Build and Test with Gradle Wrapper
+        run: ./gradlew build --no-daemon
 
-      - name: Docker Build (Only Ubuntu)
-        if: matrix.os == 'ubuntu-latest'
+      - name: Build Docker Image
         run: docker build -t my-app:latest .
